# lavarrock

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/lavarrock/: config.py  main.py
cli/: package.json  tsconfig.json
cli/src/: index.ts
cli/src/lib/: logger.ts  (+4 more)
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
plugins/lavarrock-app-launcher/: package.json  tsconfig.json
plugins/lavarrock-app-modal/: package.json  tsconfig.json
plugins/lavarrock-footer/: package.json  tsconfig.json
plugins/lavarrock-header/: package.json  vite.config.ts
plugins/lavarrock-json-tool/: package.json
plugins/lavarrock-layout-engine/: package.json  tsconfig.json
plugins/lavarrock-layout-manager/: package.json  tsconfig.json
plugins/lavarrock-search-bar/: package.json  tsconfig.json
plugins/lavarrock-search-modal/: package.json  tsconfig.json
plugins/lavarrock-settings-engine/: package.json  tsconfig.json
plugins/lavarrock-settings-manager/: package.json  tsconfig.json
plugins/lavarrock-theme-engine/: package.json
plugins/lavarrock-theme-import/: package.json
plugins/lavarrock-theme-manager/: package.json
plugins/lavarrock-tooltips/: package.json
plugins/lavarrock-ui/: package.json  vite.config.ts
plugins/lavarrock-wm/: package.json  vite.config.ts
registry/: Dockerfile  package.json
(+144 files in other folders)
